# presient

./:  view_and_fix_test.py  AGENTS.md  CONTRIBUTING.md  ISSUE_AI_TEMPLATE.md  LICENSE  Presient_backend_resolver.sh  README.md  alembic.ini  automation_settings.json  check_and_fix_presence.py  check_database.py  check_metadata.py  check_user_model.py  ci.yml  complete_real_biometric_setup.sh  create_migration.sh  create_profile.py  debug_presence_response.py  debug_test_response.py  diagnose_500_errors.py  docker-compose.mqtt.yml  docker-compose.yml  docs.yml  find_correct_endpoints.py  fix_500_errors.py  fix_alembic_complete.sh  fix_auth_issue.sh  fix_base_import.sh  fix_indentation.py  fix_indentation_final.sh  fix_mobile_localhost.sh  fix_null_constraints.sh  fix_password_validation.sh  fix_presence_prefix.py  fix_presence_response.py  fix_presence_routes.py  fix_presence_status.py  fix_profile_relationship.py  fix_profile_routes_order.py  fix_profile_username.py  (+45 more)
backend/: Dockerfile  __init__.py  db.py  dependencies.py  main-copy.py  main.py  pyproject.toml  requirements-windows-fixed.txt  requirements-windows.txt  requirements.txt
backend/api/: auth.py  firmware.py  notification_routes.py  profiles.py  routines.py  sensors.py
backend/core/: exceptions.py  logging.py  security.py
backend/db/: __init__.py  base.py  dev.db  models.py  session.py
backend/models/: __init__.py  __init__.py.backup  presence_events.py  profile.py  sensor.py
backend/routes/: auth.py  auth.py.backup  biometric_auth.py  heartbeat_auth.py  presence.py  presence.py.backup  profiles.py  (+3 more)
(+83 files in other folders)
